[gallery] fix: organize media settings buttons spacing from gallery items (#3228)

--- a/packages/plugin-gallery/web/statics/styles/gallery-items-sortable.scss
+++ b/packages/plugin-gallery/web/statics/styles/gallery-items-sortable.scss
@@ -116,7 +116,8 @@
   }
 }
 .topBar {
-  height: 40px;
+  min-height: 40px;
+  max-height: fit-content;
 
   &.mobile {
     box-sizing: border-box;
